<resources>
  <string name="app_name">IKJUN</string>
  <string name="welcome">자료 집합소 익준에 오신 것을 환영합니다.</string>

  <string name="title_login">로그인</string>
  <string name="title_register">회원가입</string>

  <string name="id">아이디</string>
  <string name="password">비밀번호</string>
  <string name="email">이메일</string>
  <string name="nickname">닉네임</string>

  <string name="find_id">아이디 찾기</string>
  <string name="find_password">비밀번호 찾기</string>
  <string name="dont_have_account">아직 계정이 없으신가요?</string>
</resources>