<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".LoginActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.5"
    android:orientation="vertical">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title_login"
      android:layout_marginBottom="16dp"
      style="@style/Text.Title" />

    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:hint="@string/id"
      android:inputType="text" />

    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:inputType="textPassword" />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:orientation="horizontal">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/find_id"
        style="@style/Text.Hint" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="|"
        style="@style/Text.Hint" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/find_password"
        style="@style/Text.Hint" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="32dp"
      android:text="@string/title_login"
      android:textStyle="bold" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="8dp"
      android:padding="4dp"
      android:text="@string/dont_have_account"
      style="@style/Text.Hint" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>